# NaviDiv

./: .gitignore  README.md  README.rst  pyproject.toml
Tutorials/Running_Reinvent/: reinvent_implementation_tutorial.md
Tutorials/Running_Reinvent/example/: customize_figure_multi_experiment.py  plot_steps_multi_experiment.py  run_reinvent.sh
Tutorials/Running_Reinvent/example/conf_folder/: test.yaml  transfer_learning.yaml
Tutorials/Running_Reinvent/example/conf_folder/reinvent_common/: default.yaml
Tutorials/Using_The_app/: app_tutorial.md
Tutorials/Using_The_app/example/: default_1_TSNE.csv  default_1_TSNE_TSNE.csv
Tutorials/Using_The_app/example/scorer_output/Rings/: Rings.csv  Rings_with_score.csv  groupby_results_Rings.csv  step_scores_Rings.csv
Tutorials/Using_The_app/example/scorer_output/clusters_tanimoto_morgan_threshold_0.8.csv/: clusters_tanimoto_morgan_threshold_0.8.csv.csv  clusters_tanimoto_morgan_threshold_0.8.csv_with_score.csv  groupby_aggregated_clusters_with_score.csv  groupby_results_clusters_tanimoto_morgan_threshold_0.8.csv.csv  step_scores_clusters_tanimoto_morgan_threshold_0.8.csv.csv
Tutorials/Using_The_app/example/scorer_output/fragments_basic_wire_frame/: fragments_basic_wire_frame.csv  fragments_basic_wire_frame_with_score.csv  groupby_results_fragments_basic_wire_frame.csv  step_scores_fragments_basic_wire_frame.csv
Tutorials/Using_The_app/example/scorer_output/fragments_none/: fragments_none.csv  fragments_none_with_score.csv  groupby_results_fragments_none.csv  step_scores_fragments_none.csv
Tutorials/Using_The_app/example/scorer_output/functional_groups/: functional_groups.csv  functional_groups_with_score.csv  groupby_results_functional_groups.csv  step_scores_functional_groups.csv
Tutorials/Using_The_app/example/scorer_output/ngrams_10/: groupby_results_ngrams_10.csv  ngrams_10.csv  ngrams_10_with_score.csv  step_scores_ngrams_10.csv
Tutorials/Using_The_app/example/scorer_output/scaffold_basic_framework/: groupby_results_scaffold_basic_framework.csv  scaffold_basic_framework.csv  (+2 more)
src/navidiv/: __init__.py  run_all_scorers.py  scorer.py  utils.py
src/navidiv/app_utils/: action_func.py  scorer_utils.py
src/navidiv/diversity/: __init__.py
src/navidiv/fragment/: __init__.py
src/navidiv/reinvent/: InputGenerator.py  __init__.py  reinvent3.py  run_TL_reinvent.py  run_reinvent_2.py  run_staged_learning_2.py
src/navidiv/scaffold/: __init__.py
src/navidiv/simlarity/: __init__.py
src/navidiv/stringbased/: __init__.py
tests/: test.py  test_agregate_clusters.py  test_cluster_minimal.py  test_evolution.py  test_fragmentation_new.py  test_fragmentation_new2.py  test_get_fragment.py  test_groupby.py  test_reinvent_optimize.py  test_scaffold.py
tests/clusters/: test_similarity_molecules_in_cluster.py
(+360 files in other folders)
