[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "navidiv"
description = "A comprehensive framework for monitoring and analyzing chemical diversity in generative molecular design."
maintainers = [
  { name = "Mohammed Azzouzi", email = "mohammed.azzouzi@epfl.ch" },
  { name = "Thanapat Worakul", email = "thanapat.worakul@epfl.ch" },
]
license = { text = "MIT" }
keywords = [
  "cheminformatics",
  "molecular diversity",
  "generative models",
  "reinforcement learning",
  "drug discovery",
  "REINVENT",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "matplotlib",
  "rdkit",
  "streamlit",
  "scikit-learn",
  "igraph",
  "plotly",
]
requires-python = ">=3.10"
dynamic = ["version"]
readme = "README.md"

[project.optional-dependencies]
reinvent = [
  "hydra-core",
  "mmpdb==2.1",
  "pydantic",
  "tensorboard",
  "xxhash",
  "python-dotenv",
  "molvs",
  "pathos",
  "chemprop==1.5.2",
  "tomli",
]
dev = [
  "ruff",
  "mypy",
  "pytest",
  "pytest-cov",
  "sphinx",
  "sphinx-copybutton",
  "furo",
]

[project.urls]
Homepage = "https://github.com/mohammedazzouzi15/NaviDiv"
Repository = "https://github.com/mohammedazzouzi15/NaviDiv"
"Bug Tracker" = "https://github.com/mohammedazzouzi15/NaviDiv/issues"

[tool.setuptools_scm]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN101", "ANN401", "COM812", "ISC001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  "S101",
  "INP001",
]
"examples/*" = [
  "INP001",
]
"docs/source/conf.py" = ["D100", "INP001"]

[tool.mypy]
show_error_codes = true
implicit_optional = false
warn_no_return = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_unreachable = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = [
  "rdkit.*",
  "torch.*",
  "torchvision.*",
  "reinvent.*",
  "igraph.*",
  "molvs.*",
  "chemprop.*",
  "mmpdb.*",
  "pathos.*",
  "streamlit.*",
  "plotly.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report term-missing"
